🩹 Fix about page link

--- a/pages/about.mdx
+++ b/pages/about.mdx
@@ -1,10 +1,8 @@
-import bd from "../blog_data.tsx";
-
 # About
 
 ## クレジット
 
-当サイトは以下のオープンソースプロジェクトによって支えられています。その他のオープンソースプロジェクトは[package.json](https://github.com/HoshimuraYuto/sikou.blog/package.json)をご覧ください。
+当サイトは以下のオープンソースプロジェクトによって支えられています。その他のオープンソースプロジェクトは[package.json](https://github.com/HoshimuraYuto/sikou.blog/blob/main/package.json)をご覧ください。
 
 - [Sensa Emoji: MIT](https://github.com/sensadesign/sensaemoji)
 
