✨ Add checkbox component

--- a/pages/wiki/how-to-use.mdx
+++ b/pages/wiki/how-to-use.mdx
@@ -12,6 +12,20 @@
 
 Windows の場合は`⊞`、Mac の場合は`⌘`を押したまま、リンクにカーソルを合わせます。
 
-import PreviewLink from "@/components";
+import { PreviewLink, Checkbox } from "@/components";
 
 例: <PreviewLink href="/about">About ページ</PreviewLink>をプレビュー
+
+### チェックボックス
+
+変更できるチェックボックスを作成できます。
+
+<br />
+
+例:
+
+<br />
+
+<Checkbox checked={true}>最初からチェックされている</Checkbox>
+
+<Checkbox>チェックがない</Checkbox>
